prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/need_space_after_float.diag.txt
ERROR: malformed number
testData/diagnostics/need_space_after_float.nut:2:9

local f = 333
println([5.0f][1])
         ^--


